# puzzlegames

./: README.md
puzzle1_danger_maze/: Cargo.toml  README.md  index.html  main.css
puzzle1_danger_maze/assets/levels/: level1.json  level2.json  level3.json  level4.json  level5.json  level6.json  level7.json  level8.json  level9.json
puzzle1_danger_maze/src/: game_control.rs  level_builder.rs  main.rs  utils.rs
puzzle1_danger_maze/src/game_components/: confetti.rs  danger_block.rs  danger_circle.rs  goal.rs  image.rs  mod.rs  mouse_handler.rs  player.rs
puzzle1_danger_maze/src/levels/: level_model.rs  mod.rs
test1_3d_canvas/: Cargo.toml  main.css
test1_3d_canvas/src/: basic.frag  basic.vert  game_control.rs  main.rs  utils.rs
test1_3d_canvas/src/components/: mod.rs  square.rs
test2_3d_cube/: Cargo.toml
test2_3d_cube/src/: basic.frag  basic.vert  game_control.rs  main.rs  utils.rs
test2_3d_cube/src/components/: cube.rs  mod.rs  mouse_handler.rs  square.rs
