[package]
name = "test1_3d_canvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.3.0"
gloo-net = "0.5.0"
js-sys = "0.3.67"
rand = "0.8.5"
serde = "1.0.203"
serde_json = "1.0.117"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
yew = { version="0.21.0", features = ["csr"] }
yew-router = "0.18.0"


[dependencies.web-sys]
version = "0.3.58"
features = [
  "Navigator",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "ImageData",
  "ImageBitmap",
  "Storage",
  "Touch",
  "TouchEvent",
  "TouchList",
  'WebGlRenderingContext', 
  'WebGl2RenderingContext', 
  'WebGlProgram', 
  'WebGlShader', 
  'WebGlBuffer', 
  'WebGlUniformLocation'
]
